--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ Makefile
 **/*.cbp
 **/CMakeScripts
 **/compile_commands.json
-**/*.cmake
+**/cpm-package-lock.cmake
 
 # Don't upload vendor folder, except for the CMakeLists.txt
 !SvarnEngine/vendor/
