--- a/SvarnEngine/src/CMakeLists.txt
+++ b/SvarnEngine/src/CMakeLists.txt
@@ -1,32 +1,61 @@
 ﻿set(SOURCES
-		"Svarn.h"
-		"svpch.cpp"
-		"svpch.h"
+    "Svarn.h"
+    "svpch.cpp"
+    "svpch.h"
 
-		"Svarn/EntryPoint.h"
-		"Svarn/Core.h"
-		"Svarn/Application.cpp"
-		"Svarn/Application.h"
+    "Svarn/EntryPoint.h"
+    "Svarn/Core.h"
+    "Svarn/Application.cpp"
+    "Svarn/Application.h"
+    "Svarn/Input.h"
         
-        "Svarn/Layer.cpp"
-        "Svarn/Layer.h"
-        "Svarn/LayerStack.cpp"
-        "Svarn/LayerStack.h"
+    "Svarn/Layer.cpp"
+    "Svarn/Layer.h"
+    "Svarn/LayerStack.cpp"
+    "Svarn/LayerStack.h"
 
-        "Svarn/ImGui/ImGuiLayer.cpp"
-        "Svarn/ImGui/ImGuiLayer.h"
+    "Svarn/ImGui/ImGuiLayer.cpp"
+    "Svarn/ImGui/ImGuiLayer.h"
 
-		"Svarn/Log.cpp"
-		"Svarn/Log.h"
-		"Svarn/Window.h"
+    "Svarn/Log.cpp"
+    "Svarn/Log.h"
+    "Svarn/Window.h"
 
-		"Svarn/Events/ApplicationEvent.h"
-		"Svarn/Events/Event.h"
-		"Svarn/Events/KeyEvent.h"
-		"Svarn/Events/MouseEvent.h"
+    "Svarn/KeyCodes.h"
 
-		"Platform/Windows/WindowsWindow.cpp"
-		"Platform/Windows/WindowsWindow.h"
+    "Svarn/Events/ApplicationEvent.h"
+    "Svarn/Events/Event.h"
+    "Svarn/Events/KeyEvent.h"
+    "Svarn/Events/MouseEvent.h"
+
+
+    "Svarn/Renderer/Buffer.h"
+    "Svarn/Renderer/Buffer.cpp"
+    "Svarn/Renderer/RenderCommand.cpp"
+    "Svarn/Renderer/RenderCommand.h"
+    "Svarn/Renderer/Renderer.cpp"
+    "Svarn/Renderer/Renderer.h"
+    "Svarn/Renderer/RendererAPI.cpp"
+    "Svarn/Renderer/RendererAPI.h"
+    "Svarn/Renderer/RenderingContext.h"
+    "Svarn/Renderer/Shader.cpp"
+    "Svarn/Renderer/Shader.h"
+    "Svarn/Renderer/VertexArray.h"
+    "Svarn/Renderer/VertexArray.cpp"
+
+    "Platform/OpenGL/OpenGLBuffer.cpp"
+    "Platform/OpenGL/OpenGLBuffer.h"
+    "Platform/OpenGL/OpenGLRendererAPI.cpp"
+    "Platform/OpenGL/OpenGLRendererAPI.h"
+    "Platform/OpenGL/OpenGLRenderingContext.cpp"  
+    "Platform/OpenGL/OpenGLRenderingContext.h"  
+    "Platform/OpenGL/OpenGLVertexArray.cpp"
+    "Platform/OpenGL/OpenGLVertexArray.h"
+
+    "Platform/Linux/LinuxInput.cpp"
+    "Platform/Linux/LinuxInput.h"
+    "Platform/Linux/LinuxWindow.cpp"
+    "Platform/Linux/LinuxWindow.h"
 )
 
 add_library(SvarnEngine SHARED
