--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+ViewportPos=1325,226
+ViewportId=0x59819E39
+Size=549,701
 Collapsed=0
+
+[Window][Example: Log]
+Pos=0,372
+Size=1280,348
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Test]
+Pos=266,344
+Size=93,32
+Collapsed=0
+
+[Docking][Data]
+DockSpace ID=0xC0DFADC4 Window=0xD0388BC8 Pos=0,19 Size=1280,701 CentralNode=1
 
