--- a/imgui.ini
+++ b/imgui.ini
@@ -15,7 +15,6 @@ Size=1280,348
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -24,6 +23,11 @@ Pos=266,344
 Size=93,32
 Collapsed=0
 
+[Window][Renderer]
+ViewportPos=1311,41
+ViewportId=0xCA053822
+Size=546,235
+Collapsed=0
+
 [Docking][Data]
-DockSpace ID=0xC0DFADC4 Window=0xD0388BC8 Pos=0,19 Size=1280,701 CentralNode=1
 
