--- a/SvarnEngine/src/CMakeLists.txt
+++ b/SvarnEngine/src/CMakeLists.txt
@@ -36,6 +36,10 @@
 
     "Svarn/Renderer/Buffer.h"
     "Svarn/Renderer/Buffer.cpp"
+    "Svarn/Renderer/Mesh.h"
+    "Svarn/Renderer/Mesh.cpp"
+    "Svarn/Renderer/Model.h"
+    "Svarn/Renderer/Model.cpp"
     "Svarn/Renderer/RenderCommand.cpp"
     "Svarn/Renderer/RenderCommand.h"
     "Svarn/Renderer/Renderer.cpp"
