Started implementing equirect to cube texture without abstractions

--- a/imgui.ini
+++ b/imgui.ini
@@ -24,9 +24,8 @@ Size=93,32
 Collapsed=0
 
 [Window][Renderer]
-ViewportPos=1311,41
-ViewportId=0xCA053822
-Size=546,235
+Pos=1308,118
+Size=546,251
 Collapsed=0
 
 [Docking][Data]
