--- a/imgui.ini
+++ b/imgui.ini
@@ -24,8 +24,12 @@ Size=93,32
 Collapsed=0
 
 [Window][Renderer]
-Pos=1308,118
-Size=546,251
+Pos=1379,71
+Size=529,534
+Collapsed=0
+
+[Window][WindowOverViewport_11111111]
+Size=1920,1080
 Collapsed=0
 
 [Docking][Data]
