--- a/SvarnEngine/src/CMakeLists.txt
+++ b/SvarnEngine/src/CMakeLists.txt
@@ -34,12 +34,14 @@
     "Svarn/Events/MouseEvent.h"
 
 
-    "Svarn/Renderer/Buffer.h"
     "Svarn/Renderer/Buffer.cpp"
-    "Svarn/Renderer/Mesh.h"
+    "Svarn/Renderer/Buffer.h"
+    "Svarn/Renderer/Framebuffer.cpp"
+    "Svarn/Renderer/Framebuffer.h"
     "Svarn/Renderer/Mesh.cpp"
-    "Svarn/Renderer/Model.h"
+    "Svarn/Renderer/Mesh.h"
     "Svarn/Renderer/Model.cpp"
+    "Svarn/Renderer/Model.h"
     "Svarn/Renderer/Primitives.cpp"
     "Svarn/Renderer/Primitives.h"
     "Svarn/Renderer/RenderCommand.cpp"
@@ -53,11 +55,13 @@
     "Svarn/Renderer/Shader.h"
     "Svarn/Renderer/Texture.cpp"
     "Svarn/Renderer/Texture.h"
-    "Svarn/Renderer/VertexArray.h"
     "Svarn/Renderer/VertexArray.cpp"
+    "Svarn/Renderer/VertexArray.h"
 
     "Platform/OpenGL/OpenGLBuffer.cpp"
     "Platform/OpenGL/OpenGLBuffer.h"
+    "Platform/OpenGL/OpenGLFramebuffer.cpp"
+    "Platform/OpenGL/OpenGLFramebuffer.h"
     "Platform/OpenGL/OpenGLRendererAPI.cpp"
     "Platform/OpenGL/OpenGLRendererAPI.h"
     "Platform/OpenGL/OpenGLRenderingContext.cpp"  
